--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.24.3",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.69.0",
+    "next": "14.2.23",
+    "next-sanity": "^9.8.35",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.23"
+    "react-icons": "^5.4.0",
+    "sanity": "^3.69.0",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.23"
+    "typescript": "^5"
   }
 }
